<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    android:gravity="center"
    android:padding="10dp">

    <EditText
        android:id="@+id/fragmentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/create_storyboard"
        android:width="300dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragmentCanelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/cancel"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/fragmentSubmitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/submit"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>