<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralWhite"
    tools:context="com.example.jag27.sbv002.MainActivity">


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/storyboard"
        android:layout_centerHorizontal="true"
        android:textSize="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home_screen_button"
        android:text="@string/create_storyboard"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home_screen_button"
        android:text="@string/load_storyboard"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/create_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/options"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home_screen_button"
        android:text="@string/options"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/load_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/quit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home_screen_button"
        android:text="@string/quit"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/options"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
